--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,11 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 1.5;
-
+	background-color: #c4d8db6e;
 	--primary-text-color: #181820;
 	--secondary-text-color: #5c5c62;
 	--durability-text-color: #6a737d9c;
-	--icon-color: #6a737d;
+	--icon-color: #6f767c7e;
 	--border-color: #ff00d945;
 	--text-decoration-color: #ff00c8;
 }
@@ -54,6 +54,7 @@ body {
 	.main-info,
 	.contact_info_container {
 		 flex-direction: column;
+	
 	}
 
 	.contact_info_container {
@@ -91,10 +92,12 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+		
   }
 
   .contact-info__block--center {
       justify-content: center;
+		
   }
 
   .contact-info__item {
